更新输出结果并修复代码单元

--- a/auto_self_MLP.ipynb
+++ b/auto_self_MLP.ipynb
@@ -1846,47 +1846,47 @@
     {
      "data": {
       "text/plain": [
-       "[Value(data=-0.11838649386819577),\n",
-       " Value(data=-0.8217662803273436),\n",
-       " Value(data=0.00763861296114432),\n",
-       " Value(data=-0.798989299318096),\n",
-       " Value(data=0.6683113254693054),\n",
-       " Value(data=-0.48298265441171795),\n",
-       " Value(data=-0.2095820950305165),\n",
-       " Value(data=0.40872688160546056),\n",
-       " Value(data=-0.43594003801341286),\n",
-       " Value(data=0.8889824320749129),\n",
-       " Value(data=-0.5952716116335095),\n",
-       " Value(data=-0.8744816140852758),\n",
-       " Value(data=-0.052462319490967246),\n",
-       " Value(data=-0.4610022312514812),\n",
-       " Value(data=0.9897144221092995),\n",
-       " Value(data=-0.04715005838403408),\n",
-       " Value(data=0.29935455512216413),\n",
-       " Value(data=0.5095758075371475),\n",
-       " Value(data=-0.6302613421878527),\n",
-       " Value(data=0.652995524041839),\n",
-       " Value(data=0.6885576648356249),\n",
-       " Value(data=-0.18548352674213442),\n",
-       " Value(data=0.8930561943282886),\n",
-       " Value(data=0.6534793995017991),\n",
-       " Value(data=-0.8131078050373208),\n",
-       " Value(data=-0.9391516112188782),\n",
-       " Value(data=0.9205658435786708),\n",
-       " Value(data=-0.8981994713747308),\n",
-       " Value(data=0.1667278468109299),\n",
-       " Value(data=-0.1484969556820246),\n",
-       " Value(data=-0.15534928541759907),\n",
-       " Value(data=0.2240026692379402),\n",
-       " Value(data=0.6231158438570576),\n",
-       " Value(data=-0.22595222119936653),\n",
-       " Value(data=0.9667677019798286),\n",
-       " Value(data=0.4852228189994343),\n",
-       " Value(data=0.8504073458367118),\n",
-       " Value(data=-0.3324066339570413),\n",
-       " Value(data=-0.5840640921617899),\n",
-       " Value(data=-0.3332438919792837),\n",
-       " Value(data=-0.03524684092264341)]"
+       "[Value(data=-0.09511966230965418),\n",
+       " Value(data=-0.309883942198373),\n",
+       " Value(data=0.06281772836155564),\n",
+       " Value(data=-0.08703825078879435),\n",
+       " Value(data=-0.45145769913952916),\n",
+       " Value(data=-0.9343289311997971),\n",
+       " Value(data=-0.6920250384865441),\n",
+       " Value(data=-0.09519206758107956),\n",
+       " Value(data=-0.003211909444847505),\n",
+       " Value(data=0.008377554789513297),\n",
+       " Value(data=0.5472486163594796),\n",
+       " Value(data=-0.7556619440060446),\n",
+       " Value(data=0.16228209208255318),\n",
+       " Value(data=0.8324955436890316),\n",
+       " Value(data=0.06907856571086435),\n",
+       " Value(data=-0.9818815082821049),\n",
+       " Value(data=-0.6162810208881011),\n",
+       " Value(data=-0.02850186062399085),\n",
+       " Value(data=-0.1534684958339243),\n",
+       " Value(data=0.32650228944605275),\n",
+       " Value(data=-0.011253786837237767),\n",
+       " Value(data=0.9994615745934026),\n",
+       " Value(data=-0.47146187332621103),\n",
+       " Value(data=-0.8055274492947484),\n",
+       " Value(data=0.8025961663466104),\n",
+       " Value(data=0.6619806185918244),\n",
+       " Value(data=0.3489760986919337),\n",
+       " Value(data=-0.29018853753375473),\n",
+       " Value(data=0.9035561369270435),\n",
+       " Value(data=-0.48120333074494015),\n",
+       " Value(data=0.7913164099426004),\n",
+       " Value(data=0.01679976543204753),\n",
+       " Value(data=-0.4225400287122554),\n",
+       " Value(data=-0.3819533039467695),\n",
+       " Value(data=0.7706227169586091),\n",
+       " Value(data=0.7429210508062472),\n",
+       " Value(data=0.6524289467653979),\n",
+       " Value(data=-0.09730451712379273),\n",
+       " Value(data=0.5462938616266251),\n",
+       " Value(data=0.7981075501074557),\n",
+       " Value(data=0.5549200526701608)]"
       ]
      },
      "execution_count": 7,
@@ -1917,6 +1917,17 @@
     "##但是,由于迭代调用__call__,最终会调用到act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b)，这里的x就是输入的o\n",
     "##对于内部的Value类算子来说，xi相当于一个新的输入，因此得到wi*xi是一个新的初始化的Value，其grad为0，第一步的T(o).backward()并没有更新这部分的梯度\n",
     "##之所以看到部分draw_dot(T(o))部分Value的grad不为0，是因为原有的+self.b并没有重新初始化，因此对应的节点位置grad不为0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d18927a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_dot(T(o).backward())\n",
+    "##这种调用方式也是错误的，T(o).backward()本身是执行所有向前传播过程的，没有返回值"
    ]
   },
   {
@@ -5133,7 +5144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
