更新Graphviz相关导入代码为注释

--- a/auto_self_MLP.ipynb
+++ b/auto_self_MLP.ipynb
@@ -8,20 +8,20 @@
    "outputs": [],
    "source": [
     "# %pip install graphviz\n",
-    "import os\n",
-    "dot_path = r\"C:\\Program Files\\Graphviz\\bin\\dot.exe\"\n",
-    "if not os.path.exists(dot_path):\n",
-    "    raise FileNotFoundError(\"未找到 Graphviz dot 可执行文件，请安装到 C\\\\Program Files\\\\Graphviz\\\\bin\\\\dot.exe 或更新路径。\")\n",
-    "os.environ[\"GRAPHVIZ_DOT\"] = dot_path\n",
-    "os.environ[\"PATH\"] = os.path.dirname(dot_path) + os.pathsep + os.environ.get(\"PATH\", \"\")\n",
-    "from graphviz import backend\n",
-    "backend.dot_command = os.environ[\"GRAPHVIZ_DOT\"]"
+    "# import os\n",
+    "# dot_path = r\"C:\\Program Files\\Graphviz\\bin\\dot.exe\"\n",
+    "# if not os.path.exists(dot_path):\n",
+    "    # raise FileNotFoundError(\"未找到 Graphviz dot 可执行文件，请安装到 C\\\\Program Files\\\\Graphviz\\\\bin\\\\dot.exe 或更新路径。\")\n",
+    "# os.environ[\"GRAPHVIZ_DOT\"] = dot_path\n",
+    "# os.environ[\"PATH\"] = os.path.dirname(dot_path) + os.pathsep + os.environ.get(\"PATH\", \"\")\n",
+    "# from graphviz import backend\n",
+    "# backend.dot_command = os.environ[\"GRAPHVIZ_DOT\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "887928c9",
+   "execution_count": 1,
+   "id": "bffb37bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5233,7 +5233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
