增加Typst代码示例和Fibonacci序列的typ描述，学一学啦

--- a/auto_self_MLP_test.ipynb
+++ b/auto_self_MLP_test.ipynb
@@ -312,6 +312,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd5bde1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "d8ede069",
    "metadata": {},
@@ -27466,6 +27474,24 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be9e9cc",
+   "metadata": {},
+   "source": [
+    "## Typst 代码示例\n",
+    "\n",
+    "下面是在 Markdown 单元格中显示 Typst 代码的方式：\n",
+    "\n",
+    "```typst\n",
+    "$ A = pi r^2 $\n",
+    "$ \"area\" = pi dot \"radius\"^2 $\n",
+    "$ cal(A) := { x in RR | x \"is natural\" } $\n",
+    "```\n",
+    "\n",
+    "这样可以在 Notebook 中展示 Typst 排版代码。"
+   ]
   }
  ],
  "metadata": {
